--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,6 @@
-:root{
-  
-}
+:root {}
 
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -12,6 +9,8 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, /*  */Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo,
+    /*  */
+    Monaco, Consolas, 'Courier New',
     monospace;
 }
