add 3d react logo

--- a/src/components/common/vicSelect/vicSelect.module.css
+++ b/src/components/common/vicSelect/vicSelect.module.css
@@ -1,5 +1,5 @@
 .vic_select {
-    border: 1px solid var(--main);
+    border: var(--border) solid var(--main);
     display: inline-block;
     position: relative;
     padding: var(--padding);
@@ -11,7 +11,7 @@
 }
 
 .vic_select__dropdown {
-    border: 1px solid var(--main);
+    border: var(--border) solid var(--main);
     background: var(--main-opposite);
     /* outline: 1px solid red; */
     width: calc(100% + 2px);
