--- a/src/assets/css/prism.css
+++ b/src/assets/css/prism.css
@@ -2,7 +2,7 @@ code[class*="language-"],
 pre[class*="language-"] {
     color: var(--gray-6);
     background: none;
-    font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+    font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
     font-size: 1em;
     text-align: left;
     white-space: pre;
@@ -19,7 +19,6 @@ pre[class*="language-"] {
     -moz-hyphens: none;
     -ms-hyphens: none;
     hyphens: none;
-
 }
 
 /* Code blocks */
@@ -29,16 +28,16 @@ pre[class*="language-"] {
     overflow: auto;
 }
 
-:not(pre)>code[class*="language-"],
+:not(pre) > code[class*="language-"],
 pre[class*="language-"] {
     background: var(--main-opposite);
-    border: 1px solid var(--main);
+    border: var(--border) solid var(--main);
 }
 
 /* Inline code */
-:not(pre)>code[class*="language-"] {
-    padding: .1em;
-    border-radius: .3em;
+:not(pre) > code[class*="language-"] {
+    padding: 0.1em;
+    border-radius: 0.3em;
     white-space: normal;
 }
 
