--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -17,6 +17,13 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 
+    --h1: 36px;
+    --h2: 32px;
+    --h3: 28px;
+    --h4: 24px;
+    --h5: 20px;
+    --h6: 16px;
+
     --padding: 2px 4px;
     --border: 2px;
 
